welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: ';' expected but '=' found.
	"m"=ecritMessage();
           ^BDRBuggle:4: error: ')' expected but '=' found.
	if ("m"="A") {avance();}
               ^BDRBuggle:13: error: illegal start of simple expression
}
^